Sticky footer documentation

--- a/lib/jade/layout.jade
+++ b/lib/jade/layout.jade
@@ -9,21 +9,24 @@ html(lang='en')
     link(href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet")
     meta(name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no")
   body
-    include _header
+    #above-footer
+      include _header
 
-    block bleed
+      block bleed
 
-    .container
-      .row
-        main.mainpane
-          block mainpane
+      .container
+        .row
+          main.mainpane
+            block mainpane
 
-        aside.sidebar
-          block sidebar
+          aside.sidebar
+            block sidebar
 
-      block container
+        block container
 
     footer
+      .container
+        p Made by <a href="http://everything.io">Everything.io</a>
       block preJS
 
       script(src="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.2/highlight.min.js")
