--- a/lib/sass/kickstart.sass
+++ b/lib/sass/kickstart.sass
@@ -18,7 +18,13 @@
       @if $color
         color: $value
 
-// Assign mixins to static classes
+// LAYOUT
+// ------
+
+#above-footer
+  +above-footer
+
+// Assign mixins to static component classes
 
 // ALERTS
 // ------
