--- a/lib/jade/docs/3.x/ui/index.jade
+++ b/lib/jade/docs/3.x/ui/index.jade
@@ -95,6 +95,42 @@ block fullPane
           </div>
 
   :markdown
+    # Sticky footer
+
+    The sticky footer is very easy to implement. Simply wrap all the page content
+    excluding the footer in a <span class="if-semantic">div and include the mixin
+    <code>above-footer();</code></span><span class="ifnot-semantic">div with the
+    id `#above-footer`
+
+  .if-semantic
+    :markdown
+      <span>
+
+          <main id="main">
+            ...
+          </main>
+          <footer>
+            <p>Copyright, all rights reserved</p>
+          </footer>
+
+          #main {
+            @include above-footer();
+          }
+
+  .ifnot-semantic
+    :markdown
+      Normally, Kickstart does not use ids for style, but this is an exception meant
+      to remind you this class should only appear once on the page.
+
+          <main id="above-footer">
+            ...
+          </main>
+
+          <footer>
+            <p>Copyright, all rights reserved</p>
+          </footer>
+
+  :markdown
     # HTML styles
 
     Several styles are applied at the HTML level for convenience throughout
