Removing scrollbars on iframes

--- a/lib/jade/docs/3.x/ui/index.jade
+++ b/lib/jade/docs/3.x/ui/index.jade
@@ -14,7 +14,7 @@ block fullPane
 
     A fixed layout simply limits the width of the layout to a certain amount.
 
-  iframe.animation(src="/iframes/layout-fixed/fixed.html")
+  iframe.animation(scrolling="no" src="/iframes/layout-fixed/fixed.html")
 
   :markdown
     Create a container around your content <span class="if-semantic">and use the mixin
@@ -50,7 +50,7 @@ block fullPane
 
     A fluid layout allows the width of the content to match the width of the viewport
 
-  iframe.animation(src="/iframes/layout-fluid/fluid.html")
+  iframe.animation(scrolling="no" src="/iframes/layout-fluid/fluid.html")
 
   :markdown
     This one is probably the easiest to implement of all, because it is
@@ -67,7 +67,7 @@ block fullPane
     Instead of constantly resizing to the size of the viewport, a new fixed
     width is used at each breakpoint.
 
-  iframe.animation(src="/iframes/layout-fluid-fixed/fluid-fixed.html")
+  iframe.animation(scrolling="no" src="/iframes/layout-fluid-fixed/fluid-fixed.html")
 
   :markdown
     Create a container around your content <span class="if-semantic">and use the mixin
