--- a/lib/jade/docs/3.x/functions/throttling/index.jade
+++ b/lib/jade/docs/3.x/functions/throttling/index.jade
@@ -15,7 +15,7 @@ block basic
     Throttling allows a single function to be called only once every
     X milliseconds.
 
-  iframe.animation(src="/iframes/throttler/throttler.html")
+  iframe.animation(scrolling="no" src="/iframes/throttler/throttler.html")
 
   :markdown
     ## Debouncing
@@ -28,7 +28,7 @@ block basic
     X milliseconds have elapsed since it was last sent through the
     debouncer.
 
-  iframe.animation(src="/iframes/debouncer/debouncer.html")
+  iframe.animation(scrolling="no" src="/iframes/debouncer/debouncer.html")
 
   :markdown
     An example usage of the debouncer is 
