Sharpton for prez

--- a/lib/jade/layout.jade
+++ b/lib/jade/layout.jade
@@ -24,9 +24,9 @@ html(lang='en')
 
         block container
 
-    footer
+    footer.main
       .container
-        p Made by <a href="http://everything.io">Everything.io</a>
+        p Made from <a href="http://everything.io">Everything</a>
       block preJS
 
       script(src="http://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.2/highlight.min.js")
