--- a/lib/sass/docs.sass
+++ b/lib/sass/docs.sass
@@ -163,3 +163,18 @@ iframe.animation
 // Root Element
 .root-element
   +root-element
+
+footer.main
+  margin-top: $space * 4
+  background-color: $primary-color
+  padding:
+    top: $space
+    bottom: $space
+
+  p
+    margin: 0
+    color: white
+
+    a
+      color: white
+      text-decoration: underline
