--- a/lib/sass/core/_grid.sass
+++ b/lib/sass/core/_grid.sass
@@ -32,7 +32,15 @@ $grid-gutter: 15px
   align-items: stretch
   flex-wrap: wrap
 
-=set-column($columns, $offset, $ignore-auto-breakpoints: false)
+=push($columns)
+  @media screen and (min-width: $desktop)
+    margin-right: percentage($columns/$grid-columns)
+
+=pull($columns)
+  @media screen and (min-width: $desktop)
+    margin-left: percentage($columns/$grid-columns)
+
+=set-column($columns, $pull, $push)
   width: 100%
   display: block
   margin-left: 0
@@ -41,25 +49,27 @@ $grid-gutter: 15px
     width: calc(#{percentage($columns/$grid-columns)} - #{$grid-gutter})
     clear: none
 
-  @if $offset > 0
-    @media screen and (min-width: $desktop)
-      margin-left: percentage($offset/$grid-columns)
+  @if $pull > 0
+    +pull($pull)
 
-=column($type: 12, $offset: 0)
-  +set-column(12, 0, true)
+  @if $push > 0
+    +push($push)
+
+=column($type: 12, $pull: 0, $push: 0)
+  +set-column(12, 0, 0)
   @if $type == "half"
     @media screen and (min-width: $tablet)
-      +set-column($grid-columns/2, 0, true)
+      +set-column($grid-columns/2, 0, 0)
   @else if $type == "third"
     @media screen and (min-width: $phablet)
-      +set-column($grid-columns/2, 0, true)
+      +set-column($grid-columns/2, 0, 0)
     @media screen and (min-width: $tablet)
-      +set-column($grid-columns/3, 0, true)
+      +set-column($grid-columns/3, 0, 0)
   @else if $type == "twothirds"
     @media screen and (min-width: $phablet)
-      +set-column($grid-columns/2, 0, true)
+      +set-column($grid-columns/2, 0, 0)
     @media screen and (min-width: $tablet)
-      +set-column(($grid-columns * 2/3), 0, true)
+      +set-column(($grid-columns * 2/3), 0, 0)
   @else
     @media screen and (min-width: $tablet)
-      +set-column($type, $offset)
+      +set-column($type, $pull, $push)
