--- a/rails/app/assets/stylesheets/kickstart_rails/kickstart.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/kickstart.sass
@@ -1,14 +1,30 @@
 /*
  *  Kickstart
  *  =========
- *  For users who prefer to not use Sass, this will generate a CSS file with
- *  classes for all the components.
  */
+//  For users who prefer to not use Sass, this will generate a CSS file with
+//  classes for all the components.
 
 // Import the semantic index
 @import kickstart-semantic
 
-// Assign mixins to static classes
+// Generate color classes (This is as close as I can get to being dry.)
+=color-classes($prefix, $background-color: false, $color: false)
+  $color-names: "red", "orange", "yellow", "green", "blue", "violet"
+  @each $name, $value in $colors
+    .#{$prefix}-#{unquote($name)}
+      @if $background-color
+        background-color: $value
+      @if $color
+        color: $value
+
+// LAYOUT
+// ------
+
+#above-footer
+  +above-footer
+
+// Assign mixins to static component classes
 
 // ALERTS
 // ------
@@ -133,6 +149,17 @@
 .col-twothirds
   +column('twothirds')
 
+[class^="col"]
+  // Pulls
+  @for $i from 1 through 12
+    &.col-pull-#{$i}
+      +pull($i)
+
+  // Pushes
+  @for $i from 1 through 12
+    &.col-push-#{$i}
+      +push($i)
+
 // IMAGES
 // ------
 
@@ -197,6 +224,30 @@ table
 // -----
 .tile
   +tile
+
+  &.tile-primary
+    +tile-color($primary-color)
+
+  &.tile-secondary
+    +tile-color($secondary-color)
+
+  &.tile-red
+    +tile-color(map-get($colors, red))
+
+  &.tile-orange
+    +tile-color(map-get($colors, orange))
+
+  &.tile-yellow
+    +tile-color(map-get($colors, yellow))
+
+  &.tile-green
+    +tile-color(map-get($colors, green))
+
+  &.tile-blue
+    +tile-color(map-get($colors, blue))
+
+  &.tile-violet
+    +tile-color(map-get($colors, violet))
 
 // TOOLTIPS
 // --------
