--- a/rails/app/assets/stylesheets/kickstart_rails/core/_base.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/core/_base.sass
@@ -9,3 +9,11 @@ iframe
   border: 0
   padding: 15px
   margin-bottom: 25px
+
+body
+  display: flex
+  min-height: 100vh
+  flex-direction: column
+
+=above-footer
+  flex: 1
