Fixing sticky footer

--- a/lib/sass/core/_base.sass
+++ b/lib/sass/core/_base.sass
@@ -10,10 +10,10 @@ iframe
   padding: 15px
   margin-bottom: 25px
 
-body
+=above-footer
+  flex: 1
+
+=screen
   display: flex
   min-height: 100vh
   flex-direction: column
-
-=above-footer
-  flex: 1
