--- a/lib/jade/docs/3.x/ui/index.jade
+++ b/lib/jade/docs/3.x/ui/index.jade
@@ -97,24 +97,33 @@ block fullPane
   :markdown
     # Sticky footer
 
-    The sticky footer is very easy to implement. Simply wrap all the page content
+    The sticky footer is very easy to implement. First, wrap all the page content
     excluding the footer in a <span class="if-semantic">div and include the mixin
     <code>above-footer();</code></span><span class="ifnot-semantic">div with the
     id `#above-footer`
 
+    Then, <span class="if-semantic">include the `screen()` mixin on `body`</span>
+    <span class="ifnot-semantic">add `#screen` to `body`.
+
   .if-semantic
     :markdown
       <span>
+         <body id="screen">
 
-          <main id="main">
-            ...
-          </main>
-          <footer>
-            <p>Copyright, all rights reserved</p>
-          </footer>
+            <main id="main">
+              ...
+            </main>
+            <footer>
+              <p>Copyright, all rights reserved</p>
+            </footer>
+
+          </body>
 
           #main {
             @include above-footer();
+          }
+          body {
+            @include screen();
           }
 
   .ifnot-semantic
@@ -122,13 +131,15 @@ block fullPane
       Normally, Kickstart does not use ids for style, but this is an exception meant
       to remind you this class should only appear once on the page.
 
-          <main id="above-footer">
-            ...
-          </main>
+          <body id="screen">
+            <main id="above-footer">
+              ...
+            </main>
 
-          <footer>
-            <p>Copyright, all rights reserved</p>
-          </footer>
+            <footer>
+              <p>Copyright, all rights reserved</p>
+            </footer>
+          </body>
 
   :markdown
     # HTML styles
