--- a/rails/app/assets/stylesheets/kickstart_rails/themes/_default.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/themes/_default.sass
@@ -34,7 +34,7 @@ $space:               25px
 $heading-font-family: 'Lato', helvetica neue, sans-serif
 $body-font-family:    'Lato', helvetica neue, sans-serif
 $base-font-size:      16px
-$default-font-color:          map-get($gray, darkest)
+$default-font-color:  map-get($gray, darkest)
 $default-line-height: 1.4rem
 
 // --------------------------
@@ -44,7 +44,7 @@ $scalingFactor: 0.2vw
 $rootElement: (paddingV: 5px, paddingH: 12px)
 
 $default-font: $body-font-family
-$default-font-size: $base-font-size
+$default-font-size: $base-font-size  // TODO: Why?
 
 //
 // Core styling
