--- a/lib/jade/docs/3.x/ui/buttons/index.jade
+++ b/lib/jade/docs/3.x/ui/buttons/index.jade
@@ -269,13 +269,16 @@ block granular
               a(href="#") Option 2
 
         li
-          button.button.button.button-small Small
-          .button-dropdown
-          ul
+          ul.button-group.button-small
+            li 
+              a(href="#") Small
             li
-              a(href="#") Option 1
-            li
-              a(href="#") Option 2
+              a.button-dropdown(href="#") +
+              ul
+                li
+                  a(href="#") Option 1
+                li
+                  a(href="#") Option 2
 
     .col-4
       ul.list-unstyled
