--- a/lib/jade/docs/3.x/ui/index.jade
+++ b/lib/jade/docs/3.x/ui/index.jade
@@ -102,21 +102,33 @@ block fullPane
     <code>above-footer();</code></span><span class="ifnot-semantic">div with the
     id `#above-footer`
 
-    Then, <span class="if-semantic">include the `screen()` mixin on `body`</span>
-    <span class="ifnot-semantic">add `#screen` to `body`.
+    Then, <span class="if-semantic">include the `screen()` mixin on</span>
+    <span class="ifnot-semantic">add `#screen` to</span>
+    an element just below the `<body>`.
+
+  p.alert.alert-info 
+    :markdown
+      # Why not use the body?
+      
+      It's best practice not to use the body as the `screen`. This is because the
+      page's JavaScript will often append html elements to it, causing the flexbox
+      rules to include these elements when spacing out the page.
 
   .if-semantic
     :markdown
       <span>
-         <body id="screen">
 
-            <main id="main">
-              ...
-            </main>
-            <footer>
-              <p>Copyright, all rights reserved</p>
-            </footer>
+          <body>
+            <div id="screen">
 
+              <main id="main">
+                ...
+              </main>
+              <footer>
+                <p>Copyright, all rights reserved</p>
+              </footer>
+
+            </div>
           </body>
 
           #main {
