--- a/rails/app/assets/stylesheets/kickstart_rails/components/_forms.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/components/_forms.sass
@@ -48,6 +48,7 @@ input[type="radio"]
     + label
       text-align: left
 
-=form-group-default()
+=form_group-default()
   display: block
   overflow: hidden
+  margin-bottom: $space
