--- a/rails/app/assets/stylesheets/kickstart_rails/themes/_default.sass
+++ b/rails/app/assets/stylesheets/kickstart_rails/themes/_default.sass
@@ -167,8 +167,8 @@ html
 =form-left
   +form-left-default()
 
-=form-group()
-  +form-group-default()
+=form_group()
+  +form_group-default()
 
 // HR
 // --
