--- a/lib/sass/themes/_default.sass
+++ b/lib/sass/themes/_default.sass
@@ -167,8 +167,8 @@ html
 =form-left
   +form-left-default()
 
-=form-group()
-  +form-group-default()
+=form_group($orientation: 'vertical')
+  +form_group-default($orientation)
 
 // HR
 // --
